--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,87 @@
+# ==============================
 # Python
+# ==============================
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Virtual Environment
-venv/
-env/
+# ==============================
+# Entornos Virtuales
+# ==============================
+**/venv/
+**/ENV/
+**/env/
+**/env.bak/
+**/venv.bak/
 
-# IDE
+# ==============================
+# Bases de Datos
+# ==============================
+**/db.sqlite3
+**/db.sqlite3-journal
+**/*.sqlite3
+**/*.sqlite3-journal
+
+# ==============================
+# Django
+# ==============================
+**/*.log
+**/local_settings.py
+**/settings/local.py
+**/media/
+**/staticfiles/
+
+# ==============================
+# IDEs y Editores
+# ==============================
 .idea/
 .vscode/
 *.swp
 *.swo
+*.swn
+.project
+.pydevproject
+.settings/
 
-# System Files
+# ==============================
+# Archivos de entorno
+# ==============================
+.env
+.env.local
+.env.*.local
+
+# ==============================
+# Archivos del sistema operativo
+# ==============================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Add to .gitignore
-echo ".env" >> .gitignore
-echo "*.pyc" >> .gitignore
-echo "__pycache__/" >> .gitignore
-echo "venv/" >> .gitignore
-echo "*.log" >> .gitignore
+# ==============================
+# Otros
+# ==============================
+*.log
+coverage/
+htmlcov/
+.pytest_cache/
+.mypy_cache/
